syntax = "proto3";

package orchestrator;
option go_package="/orchestrator";
message RPCRequest{
    string name=1;
}

message User{
    string name=1;
    string class=2;
    int64 roll=3;
}

service Orchestrator{
    rpc GetUserByName(RPCRequest) returns(User){};
    rpc GetUser(RPCRequest) returns(User){};
}